branches/wip/Archive/3d95f9659518e3a4d4e2dc1dc97f6980-ffdfec6fd1547b9f867d676f3fc99336/output
+ g++-4.8 -std=c++11 -c -Wall -pedantic main.cpp
main.cpp:1:15: error: 'std::size_t' has not been declared
 template<std::size_t... NN1, std::size_t... NN2>
               ^
main.cpp:1:35: error: 'std::size_t' has not been declared
 template<std::size_t... NN1, std::size_t... NN2>
                                   ^
main.cpp:2:8: error: parameter pack 'NN1' must be at the end of the template parameter list
 struct append_index_seq {};
        ^
